Fix 311 not showing up

--- a/src/platform/site-wide/sass/modules/_m-footer-brand-consolidation.scss
+++ b/src/platform/site-wide/sass/modules/_m-footer-brand-consolidation.scss
@@ -202,4 +202,5 @@
 .va-footer-link-label {
   display: block;
   font-weight: bold;
+  color: $color-white;
 }
